--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ variables:
       - deploy
 
 stages:
+  - scan 
   - test
   - build
   - installer
@@ -33,3 +34,6 @@ include:
     rules:
       - if: $WORKFLOW == "deploy"
       - if: $CI_COMMIT_TAG =~ /^et-\d+/
+  - component: gitlab.protontech.ch/proton/devops/cicd-components/kits/devsecops/go@0.0.5
+    inputs:
+      stage: scan
