chore: rename CI stage 'test' to 'lint'.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,14 +12,14 @@ variables:
 
 stages:
   - analyse
-  - test
+  - lint
   - build
   - installer
   - deploy
 
 include:
   - local: /ci/setup.yml
-  - local: /ci/test.yml
+  - local: /ci/lint.yml
   - local: /ci/build.yml
     rules:
       - if: $WORKFLOW == "build"
