fix(IMEX-42): improve progress reporting.

--- a/lib/tests/CMakeLists.txt
+++ b/lib/tests/CMakeLists.txt
@@ -16,7 +16,7 @@ target_sources(etcpp_test PRIVATE
     gpa_server.cpp
     gpa_server.hpp
     test_etutil.cpp
-    test_mail_export.cpp
+    test_mail.cpp
 )
 
 target_link_libraries(etcpp_test PRIVATE etcpp etgpa Catch2::Catch2 Catch2::Catch2WithMain)
