--- a/ci/deploy.yml
+++ b/ci/deploy.yml
@@ -1,12 +1,18 @@
 ---
+variables:
+  ET_TAG: ""
 
 deploy:
   stage: deploy
   variables:
     DEPLOY_JOB: ${CI_JOB_NAME}
-    ET_TAG: ${CI_COMMIT_TAG}
   trigger:
     strategy: depend
     include:
       - local: /ci/artifactlift.yml
   when: manual
+  before_script:
+    - |
+      if [ -z "$ET_TAG" ]; then
+        export ET_TAG="$CI_COMMIT_TAG"
+      fi
